Added some KDE settings

--- a/run_once_before_decrypt-private-key.sh.tmpl
+++ b/run_once_before_decrypt-private-key.sh.tmpl
@@ -5,3 +5,5 @@ if [ ! -f "${HOME}/.config/chezmoi/key.txt" ]; then
     chezmoi age decrypt --output "${HOME}/.config/chezmoi/key.txt" --passphrase "{{ .chezmoi.sourceDir }}/key.txt.age"
     chmod 600 "${HOME}/.config/chezmoi/key.txt"
 fi
+
+# ex: ts=4 sw=4 et filetype=sh
