more rework with te secrets

--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+set +H  # Disable history expansion
 export NIXPKGS_ALLOW_UNFREE="1"
 export GITHUB_USER="dxas90"
 {{- if .secrets }}
@@ -10,4 +11,10 @@ export CODESTATS_API_KEY={{ (bitwardenFields "item" "7a212c11-d08b-4c23-9bc9-fe4
 export OPN_REMOTE_URI={{ (bitwardenFields "item" "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_REMOTE_URI.value }}
 export OPN_API_KEY={{ (bitwardenFields "item" "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_API_KEY.value }}
 export OPN_API_SECRET={{ (bitwardenFields "item" "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_API_SECRET.value }}
+
+export PM_API_URL={{ (bitwardenFields "item" "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_URL.value }}
+export PM_API_TOKEN_ID={{ (bitwardenFields "item" "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_ID.value }}
+export PM_API_TOKEN_SECRET={{ (bitwardenFields "item" "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_SECRET.value }}
+
 {{- end -}}
+set -H  # Re-enable history expansion
