--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -16,5 +16,5 @@ export PM_API_URL={{ (bitwardenFields "item" "05a57449-2f76-4cfa-870d-f0eed09e0d
 export PM_API_TOKEN_ID={{ (bitwardenFields "item" "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_ID.value }}
 export PM_API_TOKEN_SECRET={{ (bitwardenFields "item" "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_SECRET.value }}
 
-{{- end -}}
+{{- end}}
 set -H  # Re-enable history expansion
