--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -15,6 +15,8 @@ export OPN_API_SECRET={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_
 export PM_API_URL={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_URL.value }}
 export PM_API_TOKEN_ID={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_ID.value }}
 export PM_API_TOKEN_SECRET={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_SECRET.value }}
-
-{{- end}}
+{{ if stat (joinPath (env "HOME") "Sync/chezmoi.kdbx") -}}
+export FORGEJO_SSH_USERNAME={{ (keepassxc "Notes/SSH/forgejo").UserName }}
+{{ end -}}
+{{- end -}}
 set -H  # Re-enable history expansion
