added gitlab user

--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -18,5 +18,6 @@ export PM_API_TOKEN_SECRET={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d")
 {{ if stat (joinPath (env "HOME") "Sync/chezmoi.kdbx") -}}
 export FORGEJO_SSH_USERNAME={{ (keepassxc "Notes/SSH/forgejo").UserName }}
 {{ end -}}
-{{- end -}}
+{{- end }}
+export GITLAB_USER="dxas90"
 set -H  # Re-enable history expansion
