--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -7,7 +7,7 @@ export GITHUB_USER="dxas90"
 export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").FORJEJO_NEW_TOKEN.value }}
 export GITEA_TOKEN={{ (rbwFields "23c1c511-b0ba-4e16-ab86-756f5ffd6250").CI_CD_token_4004.value }}
 export CODESTATS_API_KEY={{ (rbwFields "7a212c11-d08b-4c23-9bc9-fe45aef63777").CODESTATS_API_KEY.value }}
-
+{{- if .secrets_homelab }}
 export OPN_REMOTE_URI={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_REMOTE_URI.value }}
 export OPN_API_KEY={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_API_KEY.value }}
 export OPN_API_SECRET={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_API_SECRET.value }}
@@ -15,6 +15,7 @@ export OPN_API_SECRET={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_
 export PM_API_URL={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_URL.value }}
 export PM_API_TOKEN_ID={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_ID.value }}
 export PM_API_TOKEN_SECRET={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_SECRET.value }}
+{{- end }}
 {{ if stat (joinPath (env "HOME") "Sync/chezmoi.kdbx") -}}
 export FORGEJO_SSH_USERNAME={{ (keepassxc "Notes/SSH/forgejo").UserName }}
 {{ end -}}
