--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -30,6 +30,9 @@ encryption = "age"
   ]
 [hooks.read-source-state.pre]
   command = ".local/share/chezmoi/.install-password-manager.sh"
+[hooks.apply.post]
+  command = "fc-cache"
+  args = ["-f", "-v"]
 
 [data]
   secrets = {{ $secrets }}
