--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -1,8 +1,8 @@
 {{- $secrets := true -}}
+{{- $secrets_homelab := false -}}
 {{- if (env "SECRETS_OFF") -}}
 {{- $secrets = false -}}
 {{- end -}}
-{{- $secrets_homelab := false -}}
 {{- if (env "SECRETS_AT_HOME") -}}
 {{- $secrets_homelab = true -}}
 {{- end -}}
@@ -36,3 +36,4 @@ encryption = "age"
 
 [data]
   secrets = {{ $secrets }}
+  secrets_homelab = {{ $secrets_homelab }}
