--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -4,8 +4,12 @@ set +H  # Disable history expansion
 export NIXPKGS_ALLOW_UNFREE="1"
 export GITHUB_USER="dxas90"
 {{- if .secrets }}
+{{- if not (eq .chezmoi.hostname "EPBGSOFW0178") }}
 export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").FORJEJO_NEW_TOKEN.value }}
 export GITEA_TOKEN={{ (rbwFields "23c1c511-b0ba-4e16-ab86-756f5ffd6250").CI_CD_token_4004.value }}
+{{ else }}
+export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").EPAM_TOKEN.value }}
+{{- end }}
 export CODESTATS_API_KEY={{ (rbwFields "7a212c11-d08b-4c23-9bc9-fe45aef63777").CODESTATS_API_KEY.value }}
 {{- if .secrets_homelab }}
 export OPN_REMOTE_URI={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_REMOTE_URI.value }}
