--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -6,7 +6,7 @@ export GITHUB_USER="dxas90"
 {{- if .secrets }}
 {{- if (eq .chezmoi.hostname "EPBGSOFW0178") }}
 export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").EPAM_TOKEN.value }}
-{{   else if eq .chezmoi.username "c5401338" }} # SAP
+{{   else if eq .chezmoi.username "c5401338" }} # PASS 
 export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").SAP_TOKEN.value }}
 {{ else }}
 export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").FORJEJO_NEW_TOKEN.value }}
