--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -4,11 +4,11 @@ set +H  # Disable history expansion
 export NIXPKGS_ALLOW_UNFREE="1"
 export GITHUB_USER="dxas90"
 {{- if .secrets }}
-{{- if (eq .chezmoi.hostname "EPBGSOFW0178") }}
+{{- if (eq .chezmoi.hostname "EPBGSOFW0178") }} # MAPE
 export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").EPAM_TOKEN.value }}
 {{   else if eq .chezmoi.username "c5401338" }} # PASS 
-export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").SAP_TOKEN.value }}
-{{ else }}
+export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").PAS_TOKEN.value }}
+{{ else }} # HOME
 export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").FORJEJO_NEW_TOKEN.value }}
 export GITEA_TOKEN={{ (rbwFields "23c1c511-b0ba-4e16-ab86-756f5ffd6250").CI_CD_token_4004.value }}
 {{- end }}
@@ -17,7 +17,6 @@ export CODESTATS_API_KEY={{ (rbwFields "7a212c11-d08b-4c23-9bc9-fe45aef63777").C
 export OPN_REMOTE_URI={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_REMOTE_URI.value }}
 export OPN_API_KEY={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_API_KEY.value }}
 export OPN_API_SECRET={{ (rbwFields "f8e76f60-571c-4a6a-b8a7-6c1b16897c46").OPN_API_SECRET.value }}
-
 export PM_API_URL={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_URL.value }}
 export PM_API_TOKEN_ID={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_ID.value }}
 export PM_API_TOKEN_SECRET={{ (rbwFields "05a57449-2f76-4cfa-870d-f0eed09e0d2d").PM_API_TOKEN_SECRET.value }}
