--- a/dot_env-secrets.tmpl
+++ b/dot_env-secrets.tmpl
@@ -3,6 +3,7 @@
 set +H  # Disable history expansion
 export NIXPKGS_ALLOW_UNFREE="1"
 export GITHUB_USER="dxas90"
+export VAULT_ADDR="https://hvault.5rv.me"
 {{- if .secrets }}
 {{- if (eq .chezmoi.hostname "EPBGSOFW0178") }} # MAPE
 export GITHUB_TOKEN={{ (rbwFields "e5e828fd-10c5-46bc-a420-92434a3a4b7d").EPAM_TOKEN.value }}
