--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -12,9 +12,11 @@
 {{- end -}}
 
 encryption = "age"
+{{- if stat (joinPath (env "HOME") ".config/chezmoi/key.txt") }}
 [age]
   identity = "~/.config/chezmoi/key.txt"
   recipient = "age1x0qs4gtfvvv9k3x0qjf93nzq7w8trh0e08l0zcntc2ul5gf04d0qnz3w3n"
+{{- end }}
 [keepassxc]
     database = "~/Sync/chezmoi.kdbx"
     mode = "open"
