--- a/dot_config/chezmoi/key.txt.tmpl
+++ b/dot_config/chezmoi/key.txt.tmpl
@@ -1,3 +1,3 @@
-{{- if not (stat (joinPath (env "HOME") ".config/chezmoi/key.txt")) -}}
+{{- if and .secrets (not (stat (joinPath (env "HOME") ".config/chezmoi/key.txt"))) -}}
 {{- bitwardenAttachment "key.txt" "101fcf6b-8f88-47b7-8696-94946c4e5f6e" -}}
 {{- end -}}
